deploy: a91877a2be03a64b5fa58ea950d365f53d9f06c8

--- a/_modules/evmspec/block.html
+++ b/_modules/evmspec/block.html
@@ -229,13 +229,13 @@
 
     <span class="n">index</span><span class="p">:</span> <span class="n">IntId</span>
 
-    <span class="n">amount</span><span class="p">:</span> <span class="n">Wei</span> <span class="o">=</span> <span class="n">UNSET</span>
+    <span class="n">amount</span><span class="p">:</span> <span class="n">Wei</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;This field is not always present.&quot;&quot;&quot;</span>
 
-    <span class="n">address</span><span class="p">:</span> <span class="n">Address</span> <span class="o">=</span> <span class="n">UNSET</span>
+    <span class="n">address</span><span class="p">:</span> <span class="n">Address</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;This field is not always present.&quot;&quot;&quot;</span>
 
-    <span class="n">validatorIndex</span><span class="p">:</span> <span class="n">IntId</span> <span class="o">=</span> <span class="n">UNSET</span>
+    <span class="n">validatorIndex</span><span class="p">:</span> <span class="n">IntId</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;This field is not always present.&quot;&quot;&quot;</span></div>
 
 
