--- a/_modules/evmspec/transaction.html
+++ b/_modules/evmspec/transaction.html
@@ -192,7 +192,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">blockNumber</span>
 
-    <span class="n">_accessList</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;accessList&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="n">UNSET</span><span class="p">)</span>
+    <span class="n">_accessList</span><span class="p">:</span> <span class="n">Raw</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;accessList&quot;</span><span class="p">,</span> <span class="n">default</span><span class="o">=</span><span class="n">UNSET</span><span class="p">)</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;A list of addresses and storage keys that the transaction plans to access.&quot;&quot;&quot;</span>
 
     <span class="nd">@cached_property</span>
@@ -204,13 +204,13 @@
 <div class="viewcode-block" id="TransactionRLP"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.transaction.TransactionRLP">[docs]</a><span class="k">class</span> <span class="nc">TransactionRLP</span><span class="p">(</span><span class="n">_TransactionBase</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 
     <span class="c1"># These fields are only present on Optimism, pre-Bedrock.</span>
-    <span class="n">l1BlockNumber</span><span class="p">:</span> <span class="n">BlockNumber</span> <span class="o">=</span> <span class="n">UNSET</span>
-    <span class="n">l1TxOrigin</span><span class="p">:</span> <span class="n">Address</span> <span class="o">=</span> <span class="n">UNSET</span>
+    <span class="n">l1BlockNumber</span><span class="p">:</span> <span class="n">BlockNumber</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
+    <span class="n">l1TxOrigin</span><span class="p">:</span> <span class="n">Address</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
 
     <span class="c1"># These fields are only present on Arbitrum</span>
-    <span class="n">indexInParent</span><span class="p">:</span> <span class="n">uint</span> <span class="o">=</span> <span class="n">UNSET</span>
-    <span class="n">arbType</span><span class="p">:</span> <span class="n">uint</span> <span class="o">=</span> <span class="n">UNSET</span>
-    <span class="n">arbSubType</span><span class="p">:</span> <span class="n">uint</span> <span class="o">=</span> <span class="n">UNSET</span></div>
+    <span class="n">indexInParent</span><span class="p">:</span> <span class="n">uint</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
+    <span class="n">arbType</span><span class="p">:</span> <span class="n">uint</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
+    <span class="n">arbSubType</span><span class="p">:</span> <span class="n">uint</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span></div>
 
 
 <div class="viewcode-block" id="TransactionLegacy"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.transaction.TransactionLegacy">[docs]</a><span class="k">class</span> <span class="nc">TransactionLegacy</span><span class="p">(</span><span class="n">_TransactionBase</span><span class="p">,</span> <span class="n">tag</span><span class="o">=</span><span class="s2">&quot;0x0&quot;</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
