--- a/_modules/evmspec/trace/call.html
+++ b/_modules/evmspec/trace/call.html
@@ -148,7 +148,7 @@
 <span class="sd">    None if the call errored. Error details will be included in the error field.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">error</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="n">UNSET</span>
+    <span class="n">error</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="n">UNSET</span>  <span class="c1"># type: ignore [assignment]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The error message, if an error occurred.&quot;&quot;&quot;</span></div>
 </pre></div>
 
