--- a/_modules/evmspec/trace/suicide.html
+++ b/_modules/evmspec/trace/suicide.html
@@ -83,7 +83,7 @@
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
 <span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Action type for contract suicides.</span>
+<span class="sd">    Represents the action type for contract suicides, capturing the details of the self-destruct operation.</span>
 <span class="sd">    &quot;&quot;&quot;</span></div>
 
 
@@ -96,6 +96,9 @@
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
 <span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Represents a trace of a contract self-destruct operation.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="nb">type</span><span class="p">:</span> <span class="n">ClassVar</span><span class="p">[</span><span class="n">Literal</span><span class="p">[</span><span class="s2">&quot;suicide&quot;</span><span class="p">]]</span> <span class="o">=</span> <span class="s2">&quot;suicide&quot;</span>
 
