--- a/_modules/evmspec/uints.html
+++ b/_modules/evmspec/uints.html
@@ -77,6 +77,10 @@
 
 
 <span class="k">class</span> <span class="nc">_UintData</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Base class for unsigned integer types with specific byte sizes.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
     <span class="nb">bytes</span><span class="p">:</span> <span class="nb">int</span>
     <span class="n">bits</span><span class="p">:</span> <span class="nb">int</span>
     <span class="n">min_value</span> <span class="o">=</span> <span class="mi">0</span>
