--- a/_modules/evmspec/data.html
+++ b/_modules/evmspec/data.html
@@ -86,7 +86,10 @@
     <span class="kn">from</span> <span class="nn">evmspec.receipt</span> <span class="kn">import</span> <span class="n">TransactionReceipt</span>
 
 <span class="n">_T</span> <span class="o">=</span> <span class="n">TypeVar</span><span class="p">(</span><span class="s2">&quot;_T&quot;</span><span class="p">)</span>
+<span class="sd">&quot;&quot;&quot;A generic type variable.&quot;&quot;&quot;</span>
+
 <span class="n">_DecodeHook</span> <span class="o">=</span> <span class="n">Callable</span><span class="p">[[</span><span class="n">Type</span><span class="p">[</span><span class="n">_T</span><span class="p">],</span> <span class="n">Any</span><span class="p">],</span> <span class="n">_T</span><span class="p">]</span>
+<span class="sd">&quot;&quot;&quot;A type alias for a function that decodes an object into a specific type.&quot;&quot;&quot;</span>
 
 
 <div class="viewcode-block" id="Address"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.Address">[docs]</a><span class="k">class</span> <span class="nc">Address</span><span class="p">(</span><span class="nb">str</span><span class="p">):</span>
