deploy: e9d165082bd841e99652d40419b2f56ee70489bf

--- a/_modules/evmspec/data.html
+++ b/_modules/evmspec/data.html
@@ -171,12 +171,10 @@
     <span class="c1">#    return Gwei(self) / 10**9</span>
 
 
-<div class="viewcode-block" id="BlockNumber"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.BlockNumber">[docs]</a><span class="k">class</span> <span class="nc">BlockNumber</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span>
-    <span class="o">...</span></div>
+<div class="viewcode-block" id="BlockNumber"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.BlockNumber">[docs]</a><span class="k">class</span> <span class="nc">BlockNumber</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span> <span class="o">...</span></div>
 
 
-<div class="viewcode-block" id="Nonce"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.Nonce">[docs]</a><span class="k">class</span> <span class="nc">Nonce</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span>
-    <span class="o">...</span></div>
+<div class="viewcode-block" id="Nonce"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.Nonce">[docs]</a><span class="k">class</span> <span class="nc">Nonce</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span> <span class="o">...</span></div>
 
 
 <div class="viewcode-block" id="UnixTimestamp"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.UnixTimestamp">[docs]</a><span class="k">class</span> <span class="nc">UnixTimestamp</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span>
@@ -281,8 +279,7 @@
         <span class="k">pass</span></div>
 
 
-<div class="viewcode-block" id="BlockHash"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.BlockHash">[docs]</a><span class="k">class</span> <span class="nc">BlockHash</span><span class="p">(</span><span class="n">HexBytes32</span><span class="p">):</span>
-    <span class="o">...</span></div>
+<div class="viewcode-block" id="BlockHash"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.data.BlockHash">[docs]</a><span class="k">class</span> <span class="nc">BlockHash</span><span class="p">(</span><span class="n">HexBytes32</span><span class="p">):</span> <span class="o">...</span></div>
 </pre></div>
 
            </div>
